# rcsb-mcp

./: .dockerignore  AGENTS.md  Dockerfile  LICENSE.md  README.md  pyproject.toml  server.json
.claude/: settings.local.json
.github/workflows/: _workflow-docker.yaml  publish.yaml  workflow-docker.yaml
evals/: README.md  rcsb_pdb_eval.xml
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
k8s/helm/values/: production.yaml
prompts/: pdb-assistant.md
src/rcsb_mcp/: queries.py  rcsb_data_api.py  rcsb_seq_coord_api.py  server.py  test_queries.py
src/rcsb_mcp/prompts/: pdb_assistant.md
tests/: test_queries.py  test_server.py
