[project]
name = "rcsb-mcp"
version = "0.1.0"
description = "An MCP server for the RCSB PDB Search, Data, and Sequence Coordinates APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
rcsb-search-api = "rcsb_mcp.server:main"
rcsb-data-api = "rcsb_mcp.rcsb_data_api:main"
rcsb-seq-coord-api = "rcsb_mcp.rcsb_seq_coord_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rcsb_mcp"]
